--- a/Lista2.tex
+++ b/Lista2.tex
@@ -49,4 +49,102 @@
     \thispagestyle{empty}
     \newpage
     \pagenumbering{arabic}
+    
+    \section{An\'{a}lise de Sistema no Dom\'{i}nio do Tempo}
+    \subsection{Quest\~{a}o 1}
+    \subsubsection{Item a}
+    \[\lambda^{2} + 5\lambda + 6 = 0 \rightarrow \lambda_{1} = -2; \lambda_{2} = -3 \rightarrow c_{1}e^{-2t} + c_{2}e^{-3t}\]
+    \subsubsection{Item b}
+    \[c_{1} + c_{2} = 2 \]
+    \[-2c_{1} -3c_{2} = -1 \]
+    \[c_{1} =  5\]
+    \[c_{2} =  -3\]    
+    \[y_{0} = 5e^{-2t} -3e^{-3t} \]
+    \subsection{Quest\~{a}o 2}
+    \subsubsection{Item a}   
+    \[ \lambda^{2} + \lambda = 0 \rightarrow  \lambda_{1} = 0; \lambda_{2} = -1 \rightarrow c_{1}^{-2+3j} +c_{2}e^{-t}\]   
+    \subsubsection{Item b}
+    \[c_{1} + c_{2} = 1 \]
+    \[-c_{2} = 1 \]
+    \[c_{1} =  2\]
+    \[c_{2} =  -1\]    
+    \[y_{0} = 2 -e^{-t} \]    
+    \subsection{Quest\~{a}o 3}
+    \subsubsection{Item a}   
+    \[\lambda^{2} + 4\lambda + 13 = 0 \rightarrow  \lambda_{1} = -2 + 3j; \lambda_{2} = -2 -3j \rightarrow c_{1}e^{(-2+3j)t} +c_{2}e^{(-2-3j)t} = ce^{-2t}cos(3t + \phi)\]   
+    \subsubsection{Item b}
+    \[ccos(\phi) = 1 \]
+    \[-2ccos(\phi) -3csen(\phi) = 15.98 \]
+    \[c =  10\]
+    \[\phi =  \frac{-\pi}{3}\]    
+    \[y_{0} = 10e^{-2t}cos(3t - \frac{\pi}{3}) \]      
+    \subsection{Quest\~{a}o 4}
+    \subsubsection{Item a}   
+    \[ (\lambda + 1)(\lambda^{2} + 5\lambda + 6) = 0 \rightarrow  \lambda_{1} = -1; \lambda_{2} = -2; \lambda_{3} = -3 \rightarrow c_{1}e^{-t} +c_{2}e^{-2t} + c_{3}e^{-3t}\]   
+    \subsubsection{Item b}
+    \[c_{1} + c_{2} + c_{3}  = 2 \]
+    \[-c_{1} -2c_{2} -3c_{3} = -1 \]
+    \[c_{1} +4c_{2} +9c_{3} =  5\]
+    \[c_{1} =  6\]    
+    \[c_{2} =  -7\]
+    \[c_{3} =  3\]
+    \[y_{0} =  6e^{-t} -7e^{-2t} + 3e^{-3t}\]   
+    \subsection{Quest\~{a}o 5}
+    \subsection{Quest\~{a}o 6}
+    \subsection{Quest\~{a}o 7} 
+    \subsection{Quest\~{a}o 8}
+    \[ e^{-at}u(t)\ast e^{-bt}u(t) \rightarrow \int_{0}^{t} e^{-a\tau}e^{-b(t-\tau)}\]
+    \subsection{Quest\~{a}o 9}
+    \subsection{Quest\~{a}o 10}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c} 
+    \subsubsection{Item d} 
+    \subsection{Quest\~{a}o 11}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c} 
+    \subsubsection{Item d}    
+    \subsection{Quest\~{a}o 12}
+    \subsection{Quest\~{a}o 13}
+    \subsection{Quest\~{a}o 14}
+    \subsection{Quest\~{a}o 15}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c}     
+    \subsection{Quest\~{a}o 16}
+    \section{An\'{a}lise de Sistema no Dom\'{i}nio Laplace}      
+    \subsection{Quest\~{a}o 1}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c} 
+    \subsubsection{Item d} 
+    \subsubsection{Item e} 
+    \subsubsection{Item f} 
+    \subsubsection{Item g} 
+    \subsubsection{Item h}         
+    \subsection{Quest\~{a}o 2}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c}     
+    \subsection{Quest\~{a}o 3}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c}     
+    \subsection{Quest\~{a}o 4}
+    \subsubsection{Item a} 
+    \subsubsection{Item b}     
+    \subsection{Quest\~{a}o 5}
+    \subsubsection{Item a} 
+    \subsubsection{Item b}     
+    \subsection{Quest\~{a}o 6}
+    \subsubsection{Item a} 
+    \subsubsection{Item b} 
+    \subsubsection{Item c} 
+	\subsubsection{Item d}     
+    \subsection{Quest\~{a}o 7}
+    \subsubsection{Item a} 
+    \subsubsection{Item b}     
+    \subsection{Quest\~{a}o 8}    
+                            
 \end{document}
